argocd/base/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/protocol: https
  labels:
    app: argocd
  name: argocd
  namespace: argocd
spec:
  rules:
  - host: argocd.$(DNS_DOMAIN)
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
        path: /
